--- a/app/src/main/res/layout/view_media_list_viewpager_item.xml
+++ b/app/src/main/res/layout/view_media_list_viewpager_item.xml
@@ -1,29 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:fresco="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
         android:id="@+id/slidelinearlayout">
 
-    <TextView
-            android:padding="16dp"
-            android:id="@+id/txttitle"
-            android:textStyle="bold"
-            android:textSize="30sp"
-            android:text="Title Here"
-            android:textColor="#fff"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    <TextView
-            android:padding="16dp"
-            android:id="@+id/txtdescription"
-            android:textAlignment="center"
-            android:textSize="17sp"
-            android:text="Description is Here"
-            android:textColor="#fff"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
+    <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/postImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            fresco:viewAspectRatio="1"
+            fresco:actualImageScaleType="centerCrop"
+            fresco:placeholderImage="@drawable/science"
+            android:background="#000000"/>
 
 </LinearLayout>
