fix: changed placeholder to failureImage

--- a/app/src/main/res/layout/view_post.xml
+++ b/app/src/main/res/layout/view_post.xml
@@ -28,7 +28,7 @@
                     fresco:viewAspectRatio="1"
                     app:roundAsCircle="true"
                     fresco:actualImageScaleType="centerCrop"
-                    fresco:placeholderImage="@mipmap/ic_launcher_round"/>
+                    fresco:failureImage="@mipmap/ic_launcher_round"/>
 
             <LinearLayout
                     android:layout_width="match_parent"
