--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -19,7 +19,7 @@
             android:layout_height="80dp"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             app:roundAsCircle="true"
-            app:placeholderImage="@mipmap/ic_launcher_round"
+            app:failureImage="@mipmap/ic_launcher_round"
             android:contentDescription="@string/nav_header_desc"/>
 
     <TextView
