--- a/app/src/main/res/layout/view_media_list_viewpager_item.xml
+++ b/app/src/main/res/layout/view_media_list_viewpager_item.xml
@@ -15,7 +15,7 @@
             android:adjustViewBounds="true"
             fresco:viewAspectRatio="1"
             fresco:actualImageScaleType="centerCrop"
-            fresco:placeholderImage="@drawable/science"
+            fresco:failureImage="@drawable/science"
             android:background="#000000"/>
 
 </LinearLayout>
