--- a/app/src/main/res/layout/view_user_small.xml
+++ b/app/src/main/res/layout/view_user_small.xml
@@ -17,7 +17,7 @@
             android:layout_gravity="center"
             fresco:viewAspectRatio="1"
             fresco:actualImageScaleType="centerCrop"
-            fresco:placeholderImage="@drawable/ic_launcher_foreground"
+            fresco:failureImage="@drawable/ic_launcher_foreground"
             app:roundAsCircle="true"
             app:roundingBorderWidth="2dp"
             app:roundingBorderColor="@color/colorAccent"/>
