fix: more placeholder to failureImage and removed useless id

--- a/app/src/main/res/layout/view_bookmark_grid_item.xml
+++ b/app/src/main/res/layout/view_bookmark_grid_item.xml
@@ -37,7 +37,7 @@
                 android:adjustViewBounds="true"
                 fresco:viewAspectRatio="1"
                 fresco:actualImageScaleType="fitXY"
-                fresco:placeholderImage="@drawable/science"
+                fresco:failureImage="@drawable/science"
                 android:background="#000000"/>
 
         <TextView
