--- a/app/src/main/res/layout/view_media_list_viewpager_item.xml
+++ b/app/src/main/res/layout/view_media_list_viewpager_item.xml
@@ -14,7 +14,7 @@
             android:adjustViewBounds="true"
             fresco:viewAspectRatio="1"
             fresco:actualImageScaleType="centerCrop"
-            fresco:failureImage="@drawable/science"
-            android:background="#000000"/>
+            fresco:failureImage="@drawable/ic_failure_image"
+            android:background="#b2dfdb"/>
 
 </LinearLayout>
