--- a/app/src/main/res/layout/view_single_post.xml
+++ b/app/src/main/res/layout/view_single_post.xml
@@ -54,6 +54,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingBottom="240dp"
+                android:showDividers="beginning|middle"
+                android:divider="@drawable/vertical_item_divider"
                 android:orientation="vertical">
 
             <com.facebook.drawee.view.SimpleDraweeView
@@ -74,6 +76,41 @@
                     android:paddingRight="8dp"
                     android:text="Kotlin has become the official language for Android dev"
                     android:theme="@style/AppTheme.TitleText"/>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="horizontal">
+                <com.facebook.drawee.view.SimpleDraweeView
+                        android:id="@+id/authorAvatar"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:adjustViewBounds="true"
+                        fresco:viewAspectRatio="1"
+                        app:roundAsCircle="true"
+                        fresco:actualImageScaleType="centerCrop"
+                        fresco:placeholderImage="@mipmap/ic_launcher_round"/>
+                <Space android:layout_width="8dp" android:layout_height="wrap_content"/>
+                <TextView
+                        android:id="@+id/authorName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/lora"
+                        android:textSize="15sp"
+                        android:textColor="@android:color/black"
+                        android:text="Zhaonian Luan"/>
+                <Space android:layout_width="8dp" android:layout_height="wrap_content"/>
+                <TextView
+                        android:id="@+id/date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/lora"
+                        android:textSize="13sp"
+                        android:text="3/10/2019"/>
+            </LinearLayout>
 
             <TextView
                     android:id="@+id/postText"
