--- a/app/src/main/res/anim/fade_in.xml
+++ b/app/src/main/res/anim/fade_in.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<alpha
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:interpolator="@android:anim/accelerate_interpolator"
-        android:fromAlpha="0.0"
-        android:toAlpha="1.0"
-        android:duration="120"/>
+<set xmlns:android="http://schemas.android.com/apk/res/android" android:interpolator="@android:anim/linear_interpolator">
+    <alpha
+            android:duration="100"
+            android:fromAlpha="0.1"
+            android:toAlpha="1.0">
+    </alpha>
+</set>
