--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -1,32 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <androidx.viewpager.widget.ViewPager
+            android:id="@+id/pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/pager"/>
+            android:layout_height="match_parent"/>
 
     <LinearLayout
+            android:id="@+id/navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:id="@+id/navigation">
+            android:layout_alignParentBottom="true">
 
         <com.google.android.material.button.MaterialButton
+                android:id="@+id/skip"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:text="Skip"
-                android:id="@+id/skip"/>
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:text="Skip"/>
 
         <com.google.android.material.button.MaterialButton
+                android:id="@+id/next"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:text="Next"
-                android:id="@+id/next"/>
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:text="Next"/>
     </LinearLayout>
 
     <com.ogaclejapan.smarttablayout.SmartTabLayout
@@ -35,6 +39,8 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/navigation"
             android:layout_marginBottom="20dp"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            app:stl_dividerThickness="0dp"
+            app:stl_indicatorColor="#1e88e5"/>
 
 </RelativeLayout>
