refactor: smoother color transition

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="cyan">#00BCD4</color>
-    <color name="orange">#FF9800</color>
-    <color name="green">#4CAF50</color>
+    <color name="orange_light">#ffcc80</color>
+    <color name="green_light">#c5e1a5</color>
+    <color name="purple_light">#c5cae9</color>
 </resources>
