--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -40,7 +40,10 @@
             android:layout_above="@+id/navigation"
             android:layout_marginBottom="20dp"
             android:layout_centerHorizontal="true"
+            app:stl_indicatorInterpolation="smart"
             app:stl_dividerThickness="0dp"
-            app:stl_indicatorColor="#1e88e5"/>
+            app:stl_indicatorThickness="6dp"
+            app:stl_underlineThickness="6dp"
+            app:stl_indicatorColor="@color/colorAccent"/>
 
 </RelativeLayout>
