feat: updated text style

--- a/app/src/main/res/layout/onboarding_screen1.xml
+++ b/app/src/main/res/layout/onboarding_screen1.xml
@@ -10,6 +10,7 @@
             android:id="@+id/text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/pacifico"
             android:text="Welcome!"
             android:textSize="48sp"
             android:layout_marginTop="50dp"/>
@@ -20,6 +21,6 @@
             android:layout_height="wrap_content"
             android:textSize="24sp"
             android:layout_marginTop="20dp"
-            android:text="You seem to be a new user."/>
+            android:text="You seem to be a new user. hehe"/>
 
 </LinearLayout>
