--- a/app/src/main/res/layout/onboarding_screen2.xml
+++ b/app/src/main/res/layout/onboarding_screen2.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:text="Nothing much here"
         android:textSize="48sp"
+        android:fontFamily="@font/pacifico"
         android:layout_marginTop="50dp"
         />
 
@@ -19,7 +20,7 @@
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:layout_marginTop="20dp"
-        android:text="This is a just a test app."
+        android:text="Ureka helps you discover cool science blah blah."
         />
 
 </LinearLayout>
