--- a/app/src/main/res/layout/onboarding_screen3.xml
+++ b/app/src/main/res/layout/onboarding_screen3.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:text="You're Ready"
         android:textSize="48sp"
+        android:fontFamily="@font/pacifico"
         android:layout_marginTop="50dp"
         />
 
@@ -19,7 +20,7 @@
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:layout_marginTop="20dp"
-        android:text="You can get started now."
+        android:text="You can be a part of the sharing, too! Let's ureka now blah balh"
         />
 
 </LinearLayout>
