--- a/app/src/main/res/layout/onboarding_screen1.xml
+++ b/app/src/main/res/layout/onboarding_screen1.xml
@@ -3,8 +3,7 @@
               android:orientation="vertical" android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:padding="16dp"
-              android:gravity="center_horizontal"
->
+              android:gravity="center_horizontal">
 
     <TextView
             android:id="@+id/text1"
