--- a/app/src/main/res/layout/fragment_onboarding3.xml
+++ b/app/src/main/res/layout/fragment_onboarding3.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical" android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:padding="16dp"
-              android:gravity="center_horizontal"
->
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal">
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="You're Ready"
+            android:text="What are you interested in?"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:textSize="48sp"
             android:fontFamily="@font/pacifico"
             android:layout_marginTop="50dp"/>
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:layout_marginTop="20dp"
-            android:text="You can be a part of the sharing, too! Let's ureka now blah balh"/>
+    <com.igalata.bubblepicker.rendering.BubblePicker
+            android:id="@+id/picker"
+            app:backgroundColor="@android:color/transparent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
 </LinearLayout>
