--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,12 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
+    <!-- Onboarding Backgrounds -->
     <color name="orange_light">#ffcc80</color>
     <color name="green_light">#c5e1a5</color>
     <color name="purple_light">#c5cae9</color>
 
+    <!-- Onboarding Interest Bubbles -->
     <color name="blueStart">#4EFFF3</color>
     <color name="blueEnd">#0ca6f9</color>
     <color name="purpleStart">#a369ff</color>
