--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -144,7 +144,7 @@
                     android:layout_toStartOf="@+id/chkState3"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:text="chintan@letsnurture.com"
+                    android:text="chifenw@uci.edu"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="#212121"/>
 
@@ -199,7 +199,7 @@
                     android:layout_toStartOf="@+id/chkState4"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:text="pratik@letsnurture.com"
+                    android:text="daviesx66@gmail.com"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="#212121"/>
 
@@ -344,33 +344,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="@dimen/activity_horizontal_margin">
+                android:paddingTop="@dimen/activity_horizontal_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingBottom="32dp">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Send SMS"/>
+                    android:text="Message"/>
 
-            <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
-                    android:text="Call"/>
-
-            <Button
+            <com.google.android.material.button.MaterialButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/activity_horizontal_margin"
                     android:layout_marginTop="@dimen/activity_horizontal_margin"
                     android:text="Email"/>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
+                    android:backgroundTint="#6200EE"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/activity_horizontal_margin"
                     android:layout_marginTop="@dimen/activity_horizontal_margin"
-                    android:text="Remove Contact"/>
+                    android:text="Block"/>
 
         </LinearLayout>
     </LinearLayout>
