feat: added parent to child navigation transition animation for bookmarks
feat: added trash anim

feat: added cool anim

feat: added cool anim

--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/homeContentContainer"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:scaleType="centerInside"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 </FrameLayout>
