--- a/app/src/main/res/layout/view_bookmark_grid_item.xml
+++ b/app/src/main/res/layout/view_bookmark_grid_item.xml
@@ -36,9 +36,8 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 fresco:viewAspectRatio="1"
-                fresco:actualImageScaleType="fitXY"
-                fresco:failureImage="@drawable/ic_failure_image"
-                android:background="#b2dfdb"/>
+                fresco:actualImageScaleType="centerCrop"
+                fresco:backgroundImage="@color/cyan"/>
 
         <TextView
                 android:id="@+id/postText"
