--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -13,7 +13,7 @@
             android:layout_marginTop="48dp"
             android:scaleType="center"
             android:background="#b2dfdb"
-            android:transitionName="kittenImage"/>
+            android:transitionName="postImage"/>
 
     <TextView
             android:layout_width="wrap_content"
