--- a/app/src/main/res/layout/view_post_list.xml
+++ b/app/src/main/res/layout/view_post_list.xml
@@ -29,10 +29,9 @@
             android:layout_gravity="center"
             android:layout_centerInParent="true"
             android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
-            app:lottie_rawRes="@raw/material_wave_loading"
-            app:lottie_scale="0.4"/>
+            app:lottie_rawRes="@raw/lottie_dna"
+            app:lottie_scale="0.15"/>
 
 </RelativeLayout>
