added tab in nav for open soruces

--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -16,6 +16,10 @@
                 android:id="@+id/nav_terms"
                 android:icon="@drawable/ic_menu_terms"
                 android:title="Terms"/>
+        <item
+                android:id="@+id/nav_licenses"
+                android:icon="@drawable/ic_menu_licenses"
+                android:title="Open Source Licenses"/>
     </group>
 
     <item android:title="Communicate">
